Update get in touch include

--- a/_includes/get-in-touch.html
+++ b/_includes/get-in-touch.html
@@ -4,7 +4,7 @@
       <div class='special-title centered-text'>
         <i class='icon-mail'></i>
         <h2>Get In touch with us</h2>
-        <p>We're happy to talk about your next project with you. Use the form below to reach out, email us at sales [at] rykelabs.com, or call us at 877-488-7953</p>
+        <p>We're happy to talk about your next project with you. Email us at sales [at] rykelabs.com or call us at 877-488-7953</p>
       </div>
     </div>
   </div>
